testsuite/tests/patsyn/should_fail/export-syntax.stderr

export-syntax.hs:1:12: error:
    Illegal export form (use PatternSynonyms to enable)
